# tracy_full

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: alloc.rs  bevy.rs  color.rs  frame.rs  future.rs  lib.rs  plot.rs  tracing.rs  wgpu.rs  zone.rs
tests/: tests.rs
