[package]
name = "tracy_full"
version = "1.7.1"
authors = ["SparkyPotato"]
license = "MIT"
edition = "2021"

readme = "README.md"
repository = "https://github.com/SparkyPotato/tracy_full"
documentation = "https://docs.rs/tracy_full"
description = "Fully featured bindings for the Tracy profiler"

[[test]]
name = "tests"
path = "tests/tests.rs"
harness = false

[features]
# Default features that tracy uses.
default = ["system-tracing", "context-switch-tracing", "sampling", "code-transfer", "broadcast"]

# Enable nightly-only features and optimizations.
unstable = []
# Enable the nightly Allocator API features.
allocator_api = ["unstable"]

# Bevy support.
bevy = ["bevy_ecs", "futures"]
# Tracing support.
tracing = ["dep:tracing", "tracing-subscriber"]
# WGPU support.
wgpu = ["dep:wgpu", "futures-lite"]

# Enable the capture of profiling data. Disabled by default.
enable = ["sys/enable"]
# Expose manual initialization and shutdown functions. These must be called before any other tracy functions.
manual-init = ["sys/manual-lifetime"]
# Enable support for fibers, coroutines, and async/await.
futures = ["sys/fibers"]

# Enable the capture of system-level details, if possible.
system-tracing = ["sys/system-tracing"]
# Enable the capture of context-switch data.
context-switch-tracing = ["sys/context-switch-tracing"]
# Enable sampling of call-stacks.
sampling = ["sys/sampling"]
# Enable the capture of machine code data.
code-transfer = ["sys/code-transfer"]

# Enable the broadcast of profiling data on the network.
broadcast = ["sys/broadcast"]
# Connect only to profiles running on the same machine.
only-localhost = ["sys/only-localhost"]
# Connect through IPv4 only.
only-ipv4 = ["sys/only-ipv4"]

# Enable support for low-resolution timers.
timer-fallback = ["sys/timer-fallback"]
# Enable support for profiling on demand. This has a minor performance penalty.
ondemand = ["sys/ondemand"]

[build-dependencies]
rustc_version = "0.4"

[dependencies]
ctor = { version = "0.2", optional = true }
sys = { package = "tracy-client-sys", version = "0.22.2", default-features = false }

bevy_ecs = { version = "0.12", optional = true }
futures-lite = { version = "2.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
wgpu = { version = "0.19", optional = true, default-features = false }

[target.'cfg(not(unstable))'.dependencies]
once_cell = "1.10.0"
